Second navbar update
Not finished

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,14 +4,19 @@
   </div>
 </div>
 
-<div class="container-fluid">
-  <!--  
+<div class="container-fluid"> 
+  <!--
   <div class="row">
-      <div class="col-12">
-        <app-brush-settings id="app-settings"></app-brush-settings>
-      </div>
+    <div class="col-12">
+      <app-brush-settings id="app-settings"></app-brush-settings>
     </div>
--->
+  </div>
+  -->
+  <div class="row">
+    <div class="col-12">
+      <app-brush-info id="app-info"></app-brush-info>
+    </div>
+  </div>
   <div class="row">
     <div class="col-12 col-sm-12 col-lg-8">
       <app-brush-table id="app-table"></app-brush-table>
@@ -21,6 +26,11 @@
     </div>
   </div>
 </div>
+
+ <!-- If no brushfile is chosen -->
+ <div class="container mt-5 text-center" *ngIf="brushes.length<=0">
+    <h3>Please choose a file in the menu</h3>
+  </div>
 
 <section>
   <router-outlet></router-outlet>
