--- a/src/app/brush-settings/brush-settings.component.html
+++ b/src/app/brush-settings/brush-settings.component.html
@@ -1,48 +1,56 @@
-<div class="row ml-0" *ngIf="brushes.length>0"> <!-- May need class row to align buttons -->
-    <div class="mr-2 mt-2 d-inline-block">
-        <button type="button" class="nav-link btn btn-primary" id="resetBtn" (click)="resetChannelNames()" style="padding: 6px 12px 6px 12px">Reset channel names</button>
-    </div>
+<div class="row ml-0"> <!-- May need class row to align buttons --> <!-- *ngIf="showSettings"-->
+    <button class="btn btn-secondary d-none d-lg-block" type="button" aria-haspopup="true" (onclick)="resetChannelNames()">
+        Reset channel names
+    </button>
+    <a class="d-lg-none" aria-haspopup="true" aria-expanded="false">
+        Reset channel names
+    </a>
 
-    <div class="dropdown mr-2 mt-2 d-inline-block">
-        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Brush Device
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle navbar-buttons d-none d-lg-block" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Brush Device
         </button>
+        <a class="dropdown-toggle d-lg-none" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Brush Device
+        </a>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="#">A1Brush</a>
-        <a class="dropdown-item" href="#">A2Brush</a>
-        <a class="dropdown-item" href="#">A3Brush</a>
+            <a class="dropdown-item" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">A1Brush</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">A2Brush</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">A3Brush</a>
         </div>
-    </div>
+    </div> 
 
-    <div class="dropdown mr-2 mt-2 d-inline-block">
-        <button class="btn btn-primary dropdown-toggle btn-md" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Brush Table
-        </button>
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle navbar-buttons d-none d-lg-block" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Brush Table
+            </button>
+            <a class="dropdown-toggle d-lg-none" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Brush Table
+            </a>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="#">Table1</a>
-        <a class="dropdown-item" href="#">Table2</a>
-        <a class="dropdown-item" href="#">Table3</a>
+            <a class="dropdown-item" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">Table1</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">Table2</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">Table3</a>
         </div>
-    </div>
-    <div class="dropdown mr-2 mt-2 d-inline-block">
-        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Material
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="#">Material1</a>
-        <a class="dropdown-item" href="#">Material2</a>
-        <a class="dropdown-item" href="#">Material3</a>
-        </div>
-    </div>
-    <div class="form-group d-inline-block mt-2">
-        <div class="d-inline-block">
-            <input class="form-control" type="search" value="Go to table number" id="example-search-input">
-        </div>
-    </div>
-</div>
+    </div> 
 
-<div *ngIf="fileComment">
-    <blockquote class="blockquote">
-        <p class="mb-0">File comment: "{{fileComment}}"</p>
-    </blockquote>
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle navbar-buttons d-none d-lg-block" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Material
+        </button>
+        <a class="dropdown-toggle d-lg-none" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Material
+        </a>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">Material1</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">Material2</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">Material3</a>
+        </div>
+    </div> 
 </div>
