--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light py-4"> <!-- navbar-dark bg-dark ?? -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light py-4">
   
   <span class="navbar-brand mb-0 h1 text-muted"><img src="..\..\assets\img\paint-brush.svg" height="45px" class="mr-3">Brush Editor</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,22 +55,22 @@
        </li>
        <li class="nav-item text-muted" *ngIf="brushes.length>0">
          <a class="nav-link" href="#">
-           <span class="d-lg-none" (click)="showFileInfo()">File info</span> <!-- Text only when navbar is collapsed -->
-           <i class="fas fa-info-circle fa-2x d-none d-lg-block navbar-icons" (click)="showFileInfo()"></i> <!-- Icon only on larger screens -->
+           <span class="d-lg-none" (click)="toggleFileInfo()" data-toggle="collapse" data-target=".navbar-collapse.show">File info</span> <!-- Text only when navbar is collapsed -->
+           <i class="fas fa-info-circle fa-2x d-none d-lg-block navbar-icons" (click)="toggleFileInfo()"></i> <!-- Icon only on larger screens -->
          </a>
        </li>
 
       <!-- Divider -->
-      <li class="dropdown-divider d-lg-none"></li>
+      <li class="dropdown-divider d-lg-none" *ngIf="brushes.length>0"></li>
 
       <!-- Settings -->
-      <li class="nav-item d-none d-lg-block">
+      <li class="nav-item d-none d-lg-block" *ngIf="brushes.length>0">
           <span class="h6 text-muted d-none d-lg-block ml-3 mt-3">Settings</span> <!-- This text only on larger screens -->
       </li>
-      <li class="nav-item text-muted">
+      <li class="nav-item text-muted" *ngIf="brushes.length>0">
         <a class="nav-link" href="#">
-          <span class="d-lg-none" (click)="showSettings()">Settings</span> <!-- Text only when navbar is collapsed -->
-          <i class="fas fa-cog fa-2x d-none d-lg-block navbar-icons" (click)="showSettings()"></i> <!-- Icon only on larger screens -->
+          <span class="d-lg-none" (click)="toggleSettings()" data-toggle="collapse" data-target=".navbar-collapse.show">Settings</span> <!-- Text only when navbar is collapsed -->
+          <i class="fas fa-cog fa-2x d-none d-lg-block navbar-icons" (click)="toggleSettings()"></i> <!-- Icon only on larger screens -->
         </a>
       </li>
     </ul>
