--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,78 +1,102 @@
-<!-- Main navbar implementation -->
+<!-- Alternative version of navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light py-4">
-  <span class="navbar-brand mb-0 h1 text-muted"><img src="..\..\assets\img\paint-brush.svg" height="45px" class="mr-3">Brush Editor</span>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse show navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav ml-auto">
-
-      <!-- File upload/download setting -->
-      <li class="nav-item">
-          <span class="h6 text-muted d-none d-lg-block ml-3 mt-3">Robot</span> <!-- This text only on larger screens -->
-      </li>
-      <li class="nav-item" *ngIf="brushes.length>0"> <!--  Hidden when no brushfile is choosed -->
-        <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">
-          <span class="d-lg-none">Robot: Export file</span> <!-- Text only when navbar is collapsed -->
-          <i class="fas fa-file-download fa-2x d-none d-lg-block navbar-icons"></i> <!-- Icon only on larger screens -->
-        </a>
-      </li>
-      <li class="nav-item">
-          <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">
-            <span class="d-lg-none" *ngIf="brushes.length<=0">Robot: Choose file</span> <!-- Text only when navbar is collapsed -->
-            <span class="d-lg-none" *ngIf="brushes.length>0">Robot: Choose new file</span>
-            <i class="fas fa-file-upload fa-2x d-none d-lg-block navbar-icons"></i> <!-- Icon only on larger screens -->
-          </a>
-      </li>
-      <li class="nav-item">
-          <span class="h6 text-muted d-none d-lg-block ml-3 mt-3">Local</span> <!-- This text only on larger screens -->
-      </li>
-      <li class="nav-item" *ngIf="brushes.length>0"> <!--  Hidden when no brushfile is choosed -->
-        <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show" (click)="saveFileAs()">
-          <span class="d-lg-none">Local: Export file</span> <!-- Text only when navbar is collapsed -->
-          <i class="fas fa-file-download fa-2x d-none d-lg-block navbar-icons"></i> <!-- Icon only on larger screens -->
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link pointer" href="#">
-          <label for="theFile" class="chooseFile">
-            <span class="d-lg-none" *ngIf="brushes.length<=0">Local: Choose file</span> <!-- Text only when navbar is collapsed -->
-            <span class="d-lg-none" *ngIf="brushes.length>0">Local: Choose new file</span>
-            <i class="fas fa-file-upload fa-2x d-none d-lg-block navbar-icons"></i> <!-- Icon only on larger screens -->
-          </label>
-            <div class="fileupload">
-              <input type="file" id="theFile" aria-describedby="fileUpload" (change)="fileChanged($event)" data-toggle="collapse" data-target=".navbar-collapse.show">
+    <span class="navbar-brand mb-0 h1 text-muted"><img src="..\..\assets\img\paint-brush.svg" height="45px" class="mr-3">Brush Editor</span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse show navbar-collapse mr-4" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+    
+        <!-- File upload/download setting large screen-->
+        <li class="nav-item d-none d-lg-block ml-2" > 
+            <div>
+                <a class="nav-link d-inline-block pt-0 pb-0" href="#" *ngIf="brushes.length>0"> <!-- Hidden when no brushfile is choosed -->
+                    <i class="fas fa-file-download fa-2x navbar-icons"></i>
+                </a>
+                <a class="nav-link d-inline-block pt-0 pb-0" href="#">
+                    <i class="fas fa-file-upload fa-2x navbar-icons"></i>
+                </a>
             </div>
-        </a>
-      </li>
+            <div class="text-center mt-1">
+                <p class="h6 text-muted">Robot</p>
+            </div>
+        </li>
 
-       <!-- Divider -->
-       <li class="dropdown-divider d-lg-none" *ngIf="brushes.length>0"></li>
+        <li class="nav-item d-none d-lg-block ml-2" >
+            <div>
+                <a class="nav-link d-inline-block pt-0 pb-0" href="#" (click)="saveFileAs()" *ngIf="brushes.length>0"> <!-- Hidden when no brushfile is choosed -->
+                    <i class="fas fa-file-download fa-2x navbar-icons"></i>
+                </a>
+                <a class="nav-link d-inline-block pt-0 pb-0" href="#">
+                    <div class="fileupload">
+                        <input type="file" id="theFile" aria-describedby="fileUpload" (change)="fileChanged($event)">
+                    </div>
+                    <label for="theFile" class="chooseFileLabel">
+                        <i class="fas fa-file-upload fa-2x navbar-icons"></i>
+                    </label>
+                </a>
+            </div>
+            <div class="text-center mt-1">
+                <p class="h6 text-muted">Local</p>
+            </div>
+        </li>
 
-       <!-- File info -->
-       <li class="nav-item d-none d-lg-block" *ngIf="brushes.length>0">
-           <span class="h6 text-muted d-none d-lg-block ml-3 mt-3">File info</span> <!-- This text only on larger screens -->
-       </li>
-       <li class="nav-item text-muted" *ngIf="brushes.length>0">
-         <a class="nav-link" href="#">
-           <span class="d-lg-none" (click)="toggleFileInfo()" data-toggle="collapse" data-target=".navbar-collapse.show">File info</span> <!-- Text only when navbar is collapsed -->
-           <i class="fas fa-info-circle fa-2x d-none d-lg-block navbar-icons" (click)="toggleFileInfo()"></i> <!-- Icon only on larger screens -->
-         </a>
-       </li>
+        <!-- File upload/download setting small screen-->
+        <li class="nav-item d-lg-none" *ngIf="brushes.length>0"> <!--  Hidden when no brushfile is choosed -->
+            <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">
+                <span >Robot: Export file</span> <!-- Text only when navbar is collapsed -->
+            </a>
+        </li>
+        <li class="nav-item d-lg-none">
+            <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">
+                <span *ngIf="brushes.length<=0">Robot: Choose file</span> <!-- Text only when navbar is collapsed -->
+                <span *ngIf="brushes.length>0">Robot: Choose new file</span>
+            </a>
+        </li>
+        <li class="nav-item d-lg-none" *ngIf="brushes.length>0"> <!--  Hidden when no brushfile is choosed -->
+            <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show" (click)="saveFileAs()">
+            <span class="d-lg-none">Local: Export file</span> <!-- Text only when navbar is collapsed -->
+            </a>
+        </li>
+        <li class="nav-item d-lg-none">
+            <a class="nav-link pointer" href="#">
+            <label for="theFile" class="chooseFile">
+                <span *ngIf="brushes.length<=0">Local: Choose file</span> <!-- Text only when navbar is collapsed -->
+                <span *ngIf="brushes.length>0">Local: Choose new file</span>
+            </label>
+                <div class="fileupload">
+                <input type="file" id="theFile" aria-describedby="fileUpload" (change)="fileChanged($event)" data-toggle="collapse" data-target=".navbar-collapse.show">
+                </div>
+            </a>
+        </li>
+    
+        <!-- Divider for collapsed navbar -->
+        <li class="dropdown-divider d-lg-none pb-0 pt-0 mb-0 mt-0" *ngIf="brushes.length>0"></li>
 
-      <!-- Divider -->
-      <li class="dropdown-divider d-lg-none" *ngIf="brushes.length>0"></li>
-
-      <!-- Settings -->
-      <li class="nav-item d-none d-lg-block" *ngIf="brushes.length>0">
-          <span class="h6 text-muted d-none d-lg-block ml-3 mt-3">Settings</span> <!-- This text only on larger screens -->
-      </li>
-      <li class="nav-item text-muted" *ngIf="brushes.length>0">
-        <a class="nav-link" href="#">
-          <span class="d-lg-none" (click)="toggleSettings()" data-toggle="collapse" data-target=".navbar-collapse.show">Settings</span> <!-- Text only when navbar is collapsed -->
-          <i class="fas fa-cog fa-2x d-none d-lg-block navbar-icons" (click)="toggleSettings()"></i> <!-- Icon only on larger screens -->
-        </a>
-      </li>
-    </ul>
-  </div>
+        <!-- File info -->
+        <li class="nav-item text-muted" *ngIf="brushes.length>0">
+            <a class="nav-link d-lg-none" href="#">
+                <span (click)="toggleFileInfo()" data-toggle="collapse" data-target=".navbar-collapse.show">File info</span> <!-- Navbar collapsed: Text only --> 
+            </a>
+            <a class="nav-link pt-0 pb-0 ml-2 d-none d-lg-block" href="#"> <!-- Navbar expandes: Icon and text --> 
+                <i class="fas fa-info-circle fa-2x navbar-icons text-center d-block" (click)="toggleFileInfo()"></i>
+                <span class="h6 text-muted mt-1 mb-0 d-block">File info</span>
+            </a>
+        </li>
+    
+        <!-- Divider for collapsed navbar -->
+        <li class="dropdown-divider d-lg-none pb-0 pt-0 mb-0 mt-0" *ngIf="brushes.length>0"></li>
+    
+        <!-- Settings -->
+        <li class="nav-item text-muted" *ngIf="brushes.length>0">
+            <a class="nav-link d-lg-none" href="#">  <!-- Navbar collapsed: Text only --> 
+                <span (click)="toggleSettings()" data-toggle="collapse" data-target=".navbar-collapse.show">Settings</span>
+            </a>
+            <a class="nav-link pt-0 pb-0 ml-2 d-none d-lg-block" href="#" > <!-- Navbar expandes: Icon and text --> 
+                <i class="fas fa-cog fa-2x navbar-icons text-center d-block" (click)="toggleSettings()"></i>
+                <span class="h6 text-muted mt-1 mb-0 d-block">Settings</span>
+            </a>
+        </li>
+        </ul>
+    </div>
 </nav>
