--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -4,8 +4,9 @@
 .navbar-buttons {
     margin: 0;
 }
-.chooseFile {
+.chooseFileLabel {
     cursor: pointer;
+    margin-bottom: 0;
 }
 .fileupload {
     position: relative;
