Table input fix
Also added tooltips in various components

--- a/src/app/brush-settings/brush-settings.component.html
+++ b/src/app/brush-settings/brush-settings.component.html
@@ -3,7 +3,7 @@
         <span aria-hidden="true">&times;</span>
     </button>
     <div class="mb-1 mr-1 d-md-inline-block d-block">
-        <button class="btn btn-secondary " type="button" aria-haspopup="true" (click)="resetChannelNames()">
+        <button class="btn btn-secondary " type="button" aria-haspopup="true" (click)="resetChannelNames()" title="Reset channel names to default: Channel 1, Channel 2...">
             Reset channel names
         </button>
     </div>
