--- a/src/app/brush-table/brush-table.component.scss
+++ b/src/app/brush-table/brush-table.component.scss
@@ -1,10 +1,14 @@
 table input {
     border: none;
+    padding: none;
+    margin: none;
+    width: 100%;
     background-color: transparent;
     max-width: 6em;
+    min-width: 6em;
 }
 th, td {
-    padding: 0.3em;
+    padding: 0.2em;
     max-width: 6em;
 }
 
@@ -15,6 +19,16 @@ th input {
 #pager {
     margin-top: 1em;
     margin-bottom: 1em;
+}
+.clearField {
+    width: 40px;
+    padding: 0;
+    margin: 0;
+}
+#btnClear {
+    font-size: 0.7em;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 /* Prevent outline of input when selected */
@@ -33,7 +47,4 @@ input:-webkit-autofill:hover,
 input:-webkit-autofill:focus, 
 input:-webkit-autofill:active  {
     transition: background-color 5000s ease-in-out 0s;
-}
-button {
-    font-size: 0.75em;
 }
