--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -24,7 +24,7 @@
 
         <li class="nav-item d-none d-lg-block ml-2" >
             <div>
-                <a class="nav-link d-inline-block pt-0 pb-0" href="#" (click)="saveFileAs()" *ngIf="brushes.length>0" title="Export file to yout device"> <!-- Hidden when no brushfile is choosed -->
+                <a class="nav-link d-inline-block pt-0 pb-0" href="#" (click)="saveFileAs()" *ngIf="brushes.length>0" title="Export file to your device"> <!-- Hidden when no brushfile is choosed -->
                     <i class="fas fa-file-download fa-2x navbar-icons"></i>
                 </a>
                 <a class="nav-link d-inline-block pt-0 pb-0" href="#" title="Choose local file to display">
@@ -78,7 +78,7 @@
             <a class="nav-link d-lg-none" href="#">
                 <span (click)="toggleFileInfo()" data-toggle="collapse" data-target=".navbar-collapse.show">File info</span> <!-- Navbar collapsed: Text only --> 
             </a>
-            <a class="nav-link pt-0 pb-0 ml-2 d-none d-lg-block" href="#" title="Show/hide file infomration"> <!-- Navbar expandes: Icon and text --> 
+            <a class="nav-link pt-0 pb-0 ml-2 d-none d-lg-block" href="#" title="Show/hide file information"> <!-- Navbar expandes: Icon and text --> 
                 <i class="fas fa-info-circle fa-2x navbar-icons text-center d-block" (click)="toggleFileInfo()"></i>
                 <span class="h6 text-muted mt-1 mb-0 d-block">File info</span>
             </a>
