--- a/src/app/brush-table/brush-table.component.html
+++ b/src/app/brush-table/brush-table.component.html
@@ -1,8 +1,10 @@
 <!-- Show table and graph only if a file has been uploaded -->
+<div *ngIf="inputError" class="alert alert-danger">Maximum input value is {{maxInputValue}}!</div>
 
 <div *ngIf="brushes.length>0"> 
   <div id="tableContainer">
     <h3>Data</h3>
+  <div>
     <div class="table-responsive">
       <table class="table table-hover">
         <thead>
@@ -27,10 +29,11 @@
               
               <td *ngIf="brush.ch1>=0"><input 
                 type="number"
-                id="{{brush.brushId}}ch1" 
-                value="{{brush.ch1 || ''}}" 
+                id="{{brush.brushId}}ch1"
                 placeholder="0"
-                (keyup)="updateBrushes(brush.brushId, 'ch1')" 
+                value="{{brush.ch1 || ''}}"
+                [(ngModel)]="brush.ch1"
+                (keyup)="updateBrushes(brush.brushId, 'ch1'); inputValidation()" 
                 (focus)="markRow(brush.brushId)">
               </td>
   
@@ -39,8 +42,9 @@
                 id="{{brush.brushId}}ch2" 
                 value="{{brush.ch2 || ''}}"
                 placeholder="0"
-                (keyup)="updateBrushes(brush.brushId, 'ch2')" 
-                (mousedown)="markRow(brush.brushId)">
+                [(ngModel)]="brush.ch2"
+                (keyup)="updateBrushes(brush.brushId, 'ch2'); inputValidation()" 
+                (focus)="markRow(brush.brushId)">
               </td>
   
               <td *ngIf="brush.ch3>=0"><input 
@@ -48,8 +52,9 @@
                 id="{{brush.brushId}}ch3" 
                 value="{{brush.ch3 || ''}}" 
                 placeholder="0"
-                (keyup)="updateBrushes(brush.brushId, 'ch3')" 
-                (mousedown)="markRow(brush.brushId)">
+                [(ngModel)]="brush.ch3"
+                (keyup)="updateBrushes(brush.brushId, 'ch3'); inputValidation()" 
+                (focus)="markRow(brush.brushId)">
               </td>
   
               <td *ngIf="brush.ch4>=0"><input 
@@ -57,8 +62,9 @@
                 id="{{brush.brushId}}ch4" 
                 value="{{brush.ch4 || ''}}"
                 placeholder="0"
-                (keyup)="updateBrushes(brush.brushId, 'ch4')" 
-                (mousedown)="markRow(brush.brushId)">
+                [(ngModel)]="brush.ch4"
+                (keyup)="updateBrushes(brush.brushId, 'ch4'); inputValidation()" 
+                (focus)="markRow(brush.brushId)">
               </td>
   
               <td *ngIf="brush.ch5>=0"><input 
@@ -66,8 +72,9 @@
                 id="{{brush.brushId}}ch5" 
                 value="{{brush.ch5 || ''}}"
                 placeholder="0"
-                (keyup)="updateBrushes(brush.brushId, 'ch5')" 
-                (mousedown)="markRow(brush.brushId)">
+                [(ngModel)]="brush.ch5"
+                (keyup)="updateBrushes(brush.brushId, 'ch5'); inputValidation()" 
+                (focus)="markRow(brush.brushId)">
               </td>
   
               <td><input 
@@ -75,12 +82,12 @@
                 id="{{brush.brushId}}desc" 
                 class="desc" 
                 value="{{brush.desc}}"
-                (keyup)="updateBrushes(brush.brushId, 'desc')"
-                (mousedown)="markRow(brush.brushId)">
+                (keyup)="updateBrushes(brush.brushId, 'desc'); inputValidation()"
+                (focus)="markRow(brush.brushId)">
               </td>
   
               <td>
-                <button title="Clear content of row" id="btnDelete" class="btn btn-link" (mousedown)="deleteRow(brush.brushId)">
+                <button mat-raised-button matTooltip="Clear content of row" id="btnDelete" class="btn btn-link" (mousedown)="deleteRow(brush.brushId)">
                   <i class="fas fa-times"></i>
                 </button>
               </td>
